working on the top header section, responsive also fixing the mobile collapse menu

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,6 +40,33 @@ body p, ul li, .form-check-label {
   color: #707070;
   font-family: calibri-regular;
 }
+section#top {
+  background-color: #005f8b;
+}
+.top-contact, .top-contact strong {
+  color: #fff;
+  font-family: calibri-regular;
+  font-size: 20px;
+}
+.top-buttons a.btn:not(:nth-child(2)) {
+  margin-right: 6px;
+}
+.top-buttons a.btn {
+  font-size: 18px;
+  padding: 0 6px;
+  border-radius: 3px;
+  text-transform: capitalize;
+}
+section#top .top-buttons a.sign-in {
+  background-color: #fff !important;
+  border: 1px solid #fff !important;
+  color: #e84d3d !important;
+}
+section#top .top-buttons a.btn:hover {
+  color: #fff !important;
+  border-color: #fff !important;
+  background-color: transparent !important;
+}
 .navbar.bg-light {
   background: #fff !important;
 }
@@ -82,45 +109,45 @@ header .call-to-action a.btn {
   font-family: calibri-bold;
 }
 section#services {
-	background: #005f8b;
+  background: #005f8b;
 }
 h4.services-title {
-	font-family: calibri-bold !important;
-	color: #70d1ef;
-	font-size: 25px;
+  font-family: calibri-bold !important;
+  color: #70d1ef;
+  font-size: 25px;
 }
 .services-content p {
-	color: #fff;
+  color: #fff;
   font-size: 18px;
 }
 section#services .col-md-4 {
-	padding: 0;
+  padding: 0;
 }
 section#services .col-md-4:not(:nth-child(3)) {
-	margin-right: 30px;
+  margin-right: 30px;
 }
 section#services .col-md-4 {
-	padding: 0;
-	max-width: calc(33.33% - 20px);
+  padding: 0;
+  max-width: calc(33.33% - 20px);
 }
 .services-title-item {
-	width: 100%;
+  width: 100%;
 }
 ul.services-contentItems li {
   list-style: none;
   display: inline-block;
 }
 ul.services-contentItems li:nth-child(1) {
-	width: 16%;
+  width: 16%;
 }
 ul.services-contentItems li:nth-child(2) {
-	width: 82%;
+  width: 82%;
 }
 ul.services-contentItems li img {
-	position: absolute;
-	top: 50%;
-	transform: translate(0, -50%);
-	width: 12%;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  width: 12%;
 }
 .btn.focus, .btn:focus {
   box-shadow: none !important;
@@ -211,17 +238,6 @@ section#footer ul.info li a, section#footer ul.info li p {
   font-size: 23px;
   color: #d1d3d4;
   transition: color 0.2s ease-out;
-}
-.top-info .info li {
-  display: inline-block;
-}
-.top-info .info li:not(:nth-child(2)) {
-  margin-right: 26px;
-}
-.top-info .info li p, .top-info .info li a {
-  color: #707070 !important;
-  list-style: none;
-  font-size: 18px;
 }
 /* subpage */
 .sub-page .subpage-header {
@@ -435,25 +451,25 @@ form input[type="text"], form input[type="text"]::placeholder {
   height: 45px;
 }
 .search-banner form input[type="text"] {
-	background: #fff;
-	opacity: 1 !important;
+  background: #fff;
+  opacity: 1 !important;
   border-radius: 33px;
   border: 1px solid #e84d3d !important;
   height: 50px;
 }
 .search-banner form input[type="text"]:focus {
-	box-shadow: none;
+  box-shadow: none;
 }
 .search-banner form button {
-	background-color: #e84d3d !important;
-	border: 1px solid #e84d3d !important;
-	border-radius: 2px;
+  background-color: #e84d3d !important;
+  border: 1px solid #e84d3d !important;
+  border-radius: 2px;
 }
 .search-banner form .fa.fa-search {
-	color: #fff;
+  color: #fff;
 }
 .search-banner form button.btn:hover,  {
-	background-color: #e84d3d !important;
+  background-color: #e84d3d !important;
 }
 .btn.submit-button {
   border-radius: 0.25rem;
